# triage-ml

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: tickets.csv
docs/: architecture.md
scripts/: check_drift.py  generate_dataset.py
src/triageml/: __init__.py  config.py  data.py  monitoring.py  predict.py  train_baseline.py  train_transformer.py
src/triageml/api/: __init__.py  main.py  schemas.py
tests/: test_api.py  test_data.py  test_model.py
