[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triageml"
version = "0.1.0"
description = "Production-grade NLP service for automated support-ticket triage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amir Emami" }]
keywords = ["nlp", "mlops", "fastapi", "text-classification", "transformers"]

dependencies = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "joblib>=1.3",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Heavy deep-learning stack, only needed to train/serve the transformer.
transformer = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.18",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
triageml-train = "triageml.train_baseline:train"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
